# alfred

./: .gitignore  Dockerfile  README.md  alfred.py  command.py  database.py  database.sql  handlers.py  pyproject.toml  requirements.txt  settings.py  settings_default.py  utils.py
alfred/: __init__.py  alfred.py  database.py  handlers.py  requirements.txt  settings_default.py  utils.py
alfred/hardware/esp8266/: README.md
alfred/hardware/esp8266/switch/: main.py  main2.py
alfred/hardware/sounder/: sounder.service
alfred/scripts/: nginx.j2
alfred/static/: manifest.json  service-worker.js
alfred/static/css/: base.css
alfred/static/js/: base.js
alfred/templates/: home.html  login.html
hardware/esp8266/: main.py
hardware/esp8266/sensor/: main.py
hardware/r433mhz/: light.py
scripts/: nginx.j2
settings/: development.py  production.py
src/alfred/: alfred.py  appkeys.py  command.py  database.py  database.sql  handlers.py  main.py  middlewares.py  requirements.txt  settings.py  utils.py  views.py
src/alfred/hardware/esp8266/sensor/: main.py
src/alfred/hardware/esp8266/switch/: main.py  main2.py
src/alfred/hardware/r433mhz/: README.md  light.py  light.service  send.cpp
src/alfred/hardware/sounder/: sounder.py
src/alfred/scripts/: alfred.service  nginx.conf
src/alfred/static/js/: base.js
src/alfred/templates/: error.html  home.html  login.html
static/: manifest.json  manifest.webmanifest  service-worker.js
static/css/: base.css
static/js/: base.js  jsmpg.js
templates/: home.html  login.html
tests/: test_api.py
